style.css
/* ... */
@media (max-width: 1000px) {
}
@media (max-width: 900px) {
}
@media (max-width: 800px) {
}
@media (max-width: 700px) {
}
@media (max-width: 650px) {
}
@media (max-width: 500px) {
}
@media (max-width: 400px) {
}
 */

/* End Contact Us Section */

/* Start About Section */

.about-cover {
  .about-header {
    i {
      display: none;
    }
  }
  .about-container {
    display: flex;
    flex-direction: column;

    .cards-box {
      display: flex;
      flex: 1;
      align-items: center;
      overflow: hidden;

      .information {
        width: 50%;
        display: flex;
        flex-direction: column;
        gap: 40px;
        .image-container {
          width: 90px;
          height: 90px;
          border: 7px solid var(--secoundary-color);
          border-radius: 50%;
          margin: 0 auto;
          position: relative;
          border-width: 10px;
          /* border: ; */

          img {
            width: 100%;
            height: 100%;
            border-radius: 50%;
          }
        }

        .image-container:hover::before,
        .image-container:hover::after,
        .image-container:hover {
          border-color: var(--main-color);
        }
        .image-container::before {
          content: "";
          width: 200%;
          height: 50%;
          border: 10px solid var(--secoundary-color);
          position: absolute;
          top: 50%;
          transform: translateY(-50%);
          left: 50%;
          background-image: linear-gradient(
            to right,
            var(--main-color),
            var(--background-main-color)
          );
          z-index: -1;
          transition: 0.3s;
          border-radius: 0 30px 30px 0;
        }
        .image-container::after {
          content: "";
          width: 200%;
          height: 50%;
          border: 10px solid var(--secoundary-color);
          position: absolute;
          top: 50%;
          transform: translateY(-50%);
          right: 50%;
          background-image: linear-gradient(
            to left,
            var(--main-color),
            var(--background-main-color)
          );
          z-index: -1;
          transition: 0.3s;
          border-radius: 30px 0 0 30px;
        }

        .text-container {
          display: flex;
          flex-direction: column;
          gap: 10px;
          width: 100%;
          position: relative;

          li {
            padding: 10px;
            padding-left: 40px;
            color: var(--secoundary-color);
            list-style-position: inside;
            position: relative;
            display: flex;
            gap: 10px;
            background-image: linear-gradient(
              to right,
              var(--background-main-color),
              var(--main-color)
            );
            background-size: 200%;
            box-shadow: 0 0 5px var(--main-color);
            animation: background-rotate 10s linear infinite;

            .val {
              color: var(--secoundary-color);
            }

            span {
              font-weight: lighter;
              display: flex;
              align-items: center;
              gap: 5px;
              .typeOfTime {
                font-size: 0.6rem;
                color: var(--secoundary-color);
                text-transform: uppercase;
              }
            }
          }

          li:hover {
            transform: scale(1.07);
            box-shadow: 0 0 10px var(--main-color);
          }

          li::before {
            font-weight: bold;
            font-family: "Font Awesome 5 Free";
            list-style: inside;
            position: absolute;
            left: 10px;
            top: 50%;
            transform: translateY(-50%);
            font-size: 0.6rem;
          }
          .name::before {
            content: "\f5b7";
          }
          .age::before {
            content: "\f0f1";
          }
          /* .age::before {
            content: "\30";
            filter: drop-shadow(10px 0px var(--secoundary-color)) ;
            border-bottom: 3px solid var(--main-color);
            padding-bottom: 3px ;
            
          } */
          .work::before {
            content: "\f0b1";
          }
          .status::before {
            content: "\f542";
          }
          .exp::before {
            content: "\e473";
          }
          .skills-container::before {
            content: "\f44b";
          }

          .skills-container {
            p {
              color: var(--secoundary-color);
              display: flex;
              gap: 5px;

              .skill {
                color: var(--secoundary-color);
                border: 1px dashed var(--secoundary-color);
                border-radius: 2px;
                padding: 2px 5px;
                text-transform: uppercase;
              }

              .skill:hover {
                transform: scale(1.1);
              }
            }
          }
        }

        .text-container::before {
          width: 100%;
          height: 100%;
          position: absolute;
          left: 0;
          top: 0;
          background-color: #186ca4;
        }
      }
      .animation-area {
        width: 50%;
        flex: 1;
        position: relative;
        .animation-ball {
          width: 60%;
          height: 60%;
          border-radius: 50%;
          background-image: linear-gradient(
            120deg,
            var(--main-color),
            var(--background-main-color)
          );
          position: absolute;
          left: 50%;
          top: 50%;
          transform: translate(-50%, -50%);
          opacity: 0.8;
          box-shadow: 0 0 20px var(--background-main-color);
          animation: ball-animation 5s linear infinite;
          border: 3px solid var(--secoundary-color);
        }
      }
    }
  }
}
/* ... */

